# excel.to.json.cli

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: main.yml
cmake/: FindRapidXML.cmake
